src/assets/scss/partials/_home.scss: Add fix to text wrapping in safari

--- a/src/assets/scss/partials/_home.scss
+++ b/src/assets/scss/partials/_home.scss
@@ -34,9 +34,8 @@
   font-weight: 200;
   padding-bottom: 10px;
 
+  display: inline-block;
   white-space: nowrap;
-  float: left;
-  margin-right: 0.5em;
 }
 
 .home-text-small {
